--- a/config/locales/fra/languages.yml
+++ b/config/locales/fra/languages.yml
@@ -1,239 +1,106 @@
 fra:
   languages:
-    ace: 'Aceh'
-    acm: 'Arabe (mésopotamien)'
-    acq: 'Arabe (parlé de Ta’izzi-Adeni)'
-    acw: 'Arabe (Hijazi)'
-    aeb: 'Arabe (tunisien parlé)'
-    aec: 'Arabe (séoudien parlé)'
-    afb: 'Arabe (parlé du Golfe)'
     afr: 'Afrikaans'
-    ajp: 'Arabe (lévantin du Sud)'
-    aka: 'Akan'
-    aln: 'Albanais (Gheg)'
-    als: 'Albanais (Tosk)'
     amh: 'Amharique'
-    apc: 'Arabe (lévantin du Nord)'
-    apd: 'Arabe (soudanais)'
-    ara: 'Arabe'
     arb: 'Arabe (standard)'
-    arq: 'Arabe (algérien)'
-    ars: 'Arabe (Najdi)'
-    ary: 'Arabe (marocain)'
-    arz: 'Arabe (égyptien)'
-    asm: 'Assamais'
-    awa: 'Awadhi'
-    ayl: 'Arabe (lybien)'
-    ayn: 'Arabe (Sanaani)'
-    ayp: 'Arabe (mésopotamien du Nord)'
-    azb: 'Azéri (du Sud)'
+    aym: 'Aymara'
     aze: 'Azéri'
-    azj: 'Azéri (du Nord)'
-    bal: 'Baloutchi'
-    ban: 'Balinais'
-    bar: 'Bavarois'
-    #>bcc: 'Balochi, Southern'
     bel: 'Biélorusse'
-    bem: 'Bemba'
     ben: 'Bengali'
-    #>bfy: 'Bagheli'
-    #>bgc: 'Haryanvi'
-    bho: 'Bhojpurî'
-    bik: 'Bikol'
-    #>bjj: 'Kanauji'
-    #>bjn: 'Banjar'
-    bug: 'Bugi'
+    bis: 'Bichlamar'
     bul: 'Bulgare'
     cat: 'Catalan'
-    #>cdo: 'Min Dong Chinese'
-    ceb: 'Cebuano'
     ces: 'Tchèque'
-    #>cjy: 'Jinyu Chinese'
-    #>ckb: 'Kurdish, Central'
-    #>cmn: 'Mandarin Chinese'
-    #>ctg: 'Chittagonian'
-    #>czh: 'Huizhou Chinese'
-    #>czo: 'Min Zhong Chinese'
+    cmn: 'Mandarin'
+    crs: 'Créole seychellois'
     dan: 'Danois'
-    #>dcc: 'Deccan'
     deu: 'Allemand'
-    #>dhd: 'Dhundari'
-    doi: 'Dogri (générique)'
+    div: 'Maldivien'
+    dzo: 'Dzongkha'
     ell: 'Grec (moderne)'
     eng: 'Anglais'
-    ewe: 'Éwé'
+    est: 'Estonien'
     fas: 'Persan'
+    fij: 'Fidjien'
     fil: 'Filipino'
     fin: 'Finnois'
     fra: 'Français'
-    #>fuc: 'Pulaar'
-    ful: 'Peul'
-    #>gan: 'Gan'
-    #>gax: 'Oromo, Borana-Arsi-Guji'
-    #>gaz: 'Oromo, West Central'
-    #>gdx: 'Godwari'
-    glg: 'Galicien'
-    #>glk: 'Gilaki'
-    #>gom: 'Konkani, Goan'
+    gil: 'Kiribati'
+    gle: '(gaélique) irlandais'
     grn: 'Guarani'
-    gsw: 'Alémanique'
-    #>gug: 'Guaraní, Paraguayan'
-    guj: 'Gujarâtî'
-    #>hae: 'Oromo, Eastern'
-    hak: 'Hakka'
     hat: 'Haïtien; créole haïtien'
-    hau: 'Haoussa'
-    hbs: 'Serbo-croate'
     heb: 'Hébreu'
-    hil: 'Hiligaynon'
     hin: 'Hindi'
-    hmn: 'Hmong'
-    #>hne: 'Chhattisgarhi'
-    #>hoj: 'Harauti'
+    hmo: 'Hiri motu'
     hrv: 'Croate'
-    #>hrx: 'Hunsrik'
-    #>hsn: 'Xiang Chinese'
     hun: 'Hongrois'
     hye: 'Arménien'
-    ibo: 'Igbo'
-    ilo: 'Ilocano'
+    iba: 'Iban'
     ind: 'Indonésien'
+    isl: 'Islandais'
     ita: 'Italien'
-    #>jam: 'Jamaican Creole English'
-    jav: 'Javanais'
     jpn: 'Japonais'
-    kab: 'Kabyle'
-    kam: 'Kamba'
-    kan: 'Kannada'
-    kas: 'Kashmiri'
     kat: 'Géorgien'
-    kau: 'Kanouri'
     kaz: 'Kazakh'
     khm: 'Khmer'
-    kik: 'Kikuyu'
-    kin: 'Rwanda'
-    kmb: 'Kimbundu'
-    #>kmr: 'Kurdish, northern'
-    #>knc: 'Kanuri, Central'
-    #>kng: 'Koongo'
-    #>knn: 'Konkani (specific)'
-    kok: 'Konkani'
-    kon: 'Kongo'
+    kir: 'Kirghize'
     kor: 'Coréen'
-    #>ktu: 'Kituba (Democratic Republic of Congo)'
-    kur: 'Kurde'
-    lah: 'Lahnda'
     lao: 'Lao'
+    lat: 'Latin'
+    lav: 'Letton'
     lit: 'Lituanien'
-    #>lmn: 'Lambadi'
-    lmo: 'Lombard'
-    lua: 'Luba-lulua'
-    lug: 'Ganda'
-    luo: 'Luo'
-    mad: 'Madourais'
-    mag: 'Magahi'
-    mai: 'Maithili'
-    mal: 'Malayalam'
-    man: 'Mandingue'
-    mar: 'Marathe'
-    #>mey: 'Hassaniyya'
-    min: 'Minangkabau'
+    ltz: 'Luxembourgeois'
+    mah: 'Marshall'
+    mkd: 'Macédonien'
     mlg: 'Malgache'
-    #>mnp: 'Min Bei Chinese'
+    mlt: 'Maltais'
     mon: 'Mongol'
-    mos: 'Moré'
+    mri: 'Maori'
     msa: 'Malais'
-    #>mui: 'Musi'
-    #>mup: 'Malvi'
-    #>mvf: 'Mongolian, Peripheral'
-    mwr: 'Marvari'
     mya: 'Birman'
-    #>myi: 'Mina (India)'
-    #>mzn: 'Mazanderani'
-    #>nan: 'Min Nan Chinese'
-    nap: 'Napolitain'
+    nau: 'Nauruan'
+    nde: 'Ndébélé du Nord'
     nep: 'Népalais'
     nld: 'Néerlandais'
-    #>nod: 'Thai (Northern)'
     nor: 'Norvégien'
-    nso: 'Sotho du Nord'
     nya: 'Nyanja'
-    ori: 'Oriya'
-    orm: 'Galla'
-    pan: 'Pendjabi'
-    #>pbu: 'Pashto, Northern'
-    #>pes: 'Western Farsi'
-    #>plt: 'Malagasy, Plateau'
-    pms: 'Piémontais'
-    #>pnb: 'Panjabi, Western'
+    nzs: 'Langue des signes néo-zélandaise'
+    pau: 'Palau'
     pol: 'Polonais'
     por: 'Portugais'
-    #>prs: 'Persian (Dari)'
-    #>pst: 'Pashto, Central'
+    pov: 'Créole de Guinée-Bissau'
     pus: 'Pachto'
     que: 'Quechua'
-    #>quh: 'Quechua, South Bolivian'
-    raj: 'Rajasthani'
-    #>rkt: 'Rangpuri'
-    #>rmt: 'Domari'
+    rar: 'Rarotonga'
     ron: 'Roumain'
     run: 'Rundi'
     rus: 'Russe'
-    #>rwr: 'Marwari (India)'
-    sat: 'Santal'
-    scn: 'Sicilien'
-    #>sdh: 'Kurdish, Southern'
-    shi: 'Chleuh'
-    shn: 'Chan'
+    sag: 'Sango'
     sin: 'Singhalais'
-    #>skr: 'Seraiki'
     slk: 'Slovaque'
+    slv: 'Slovène'
+    smo: 'Samoan'
     sna: 'Shona'
-    snd: 'Sindhî'
     som: 'Somali'
     sot: 'Sotho du Sud'
-    #>sou: 'Thai, Southern'
     spa: 'Espagnol'
     sqi: 'Albanais'
     srp: 'Serbe'
-    suk: 'Sukuma'
-    sun: 'Soundanais'
+    swa: 'Swahili'
+    swb: 'Comorien'
     swe: 'Suédois'
-    #>swv: 'Shekhawati'
-    #>syl: 'Sylheti'
     tam: 'Tamoul'
-    tat: 'Tatar'
-    tel: 'Télougou'
+    tet: 'Tetum'
     tgk: 'Tadjik'
-    tgl: 'Tagalog'
     tha: 'Thaï(landais)'
     tir: 'Tigrigna'
-    tsn: 'Tswana'
-    tso: 'Tsonga'
-    #>tts: 'Thai, Northeastern'
+    ton: 'Tongan (Îles Tonga)'
+    tpi: 'Tok pisin'
     tuk: 'Turkmène'
     tur: 'Turc'
-    #>tzm: 'Tamazight, Central Atlas'
-    uig: 'Ouïgour'
+    tvl: 'Tuvalu'
+    tzm: 'Tamazight'
     ukr: 'Ukrainien'
-    umb: 'Umbundu'
     urd: 'Ourdou'
     uzb: 'Ou(s)zbek'
-    #>uzn: 'Uzbek, Northern'
-    #>vah: 'Varhadi-Nagpuri'
-    vec: 'Vénète'
     vie: 'Vietnamien'
-    vls: 'Flamand'
-    #>vmf: 'Mainfränkisch'
-    #>vmw: 'Makhuwa'
-    wol: 'Wolof'
-    #>wry: 'Merwari'
-    #>wtm: 'Mewati'
-    #>wuu: 'Wu Chinese'
-    xho: 'Xhosa'
-    yor: 'Yoruba'
-    #>yue: 'Yue Chinese (Cantonese)'
-    zha: 'Zhuang'
-    zho: 'Chinois'
-    #>zlm: 'Malay (individual language)'
-    zul: 'Zoulou'
