--- a/config/locales/fra/support.yml
+++ b/config/locales/fra/support.yml
@@ -85,7 +85,7 @@ fra:
     array:
       last_word_connector: ' et '
       sentence_connector: 'et'
-      two_words_connector: ', '
+      two_words_connector: ' et '
       words_connector: ', '
   time:
     am: 'am'
