--- a/config/locales/spa/languages.yml
+++ b/config/locales/spa/languages.yml
@@ -1,239 +1,106 @@
 spa:
   languages:
-    #>ace: 'Achinese'
-    #>acm: 'Arabic (Mesopotamian)'
-    #>acq: 'Arabic, Ta''izzi-Adeni Spoken'
-    #>acw: 'Arabic (Hijazi)'
-    #>aeb: 'Arabic, Tunisian Spoken'
-    #>aec: 'Arabic, Saidi Spoken'
-    #>afb: 'Arabic, Gulf Spoken'
     afr: 'Afrikaans'
-    #>ajp: 'Arabic (South Levantine)'
-    aka: 'Acano'
-    #>aln: 'Albanian (Gheg)'
-    #>als: 'Albanian (Tosk)'
     amh: 'Amárico'
-    #>apc: 'Arabic (North Levantine)'
-    #>apd: 'Arabic (Sudanese)'
-    ara: 'Árabe'
     #>arb: 'Arabic (standard)'
-    #>arq: 'Arabic (Algerian)'
-    #>ars: 'Arabic (Najdi)'
-    #>ary: 'Arabic (Moroccan)'
-    #>arz: 'Arabic (Egyptian)'
-    asm: 'Asamés'
-    awa: 'Awadhi'
-    #>ayl: 'Arabic (Libyan)'
-    #>ayn: 'Arabic (Sanaani)'
-    #>ayp: 'Arabic (North Mesopotamian)'
-    #>azb: 'Azerbaijani, South'
+    aym: 'Aimara'
     aze: 'Azerbayano'
-    #>azj: 'Azerbaijani (North)'
-    #>bal: 'Baluchi'
-    ban: 'Balinés'
-    bar: 'Bávaro'
-    #>bcc: 'Balochi, Southern'
     bel: 'Bielorruso'
-    bem: 'Bemba'
     ben: 'Bengalí'
-    #>bfy: 'Bagheli'
-    bgc: 'Haryanví'
-    bho: 'Bhojpurí'
-    bik: 'Bikol'
-    bjj: 'Kanauji'
-    #>bjn: 'Banjar'
-    #>bug: 'Buginese'
+    bis: 'Bislama'
     bul: 'Búlgaro'
     cat: 'Catalán'
-    #>cdo: 'Min Dong Chinese'
-    ceb: 'Cebuano'
     ces: 'Checo'
-    #>cjy: 'Jinyu Chinese'
-    #>ckb: 'Kurdish, Central'
     cmn: 'Chino mandarín'
-    #>ctg: 'Chittagonian'
-    #>czh: 'Huizhou Chinese'
-    #>czo: 'Min Zhong Chinese'
+    #>crs: 'Seselwa Creole French'
     dan: 'Danés'
-    #>dcc: 'Deccan'
     deu: 'Alemán'
-    #>dhd: 'Dhundari'
-    doi: 'Dogri'
+    div: 'Maldivo'
+    dzo: 'Dzongkha'
     ell: 'Griego (moderno)'
     eng: 'Inglés'
-    ewe: 'Efé'
+    est: 'Estonio'
     fas: 'Persa'
+    fij: 'Fi(d)jiano'
     fil: 'Filipino'
     fin: 'Fin(land)és'
     fra: 'Francés'
-    #>fuc: 'Pulaar'
-    #>ful: 'Fulah'
-    #>gan: 'Gan'
-    #>gax: 'Oromo, Borana-Arsi-Guji'
-    #>gaz: 'Oromo, West Central'
-    #>gdx: 'Godwari'
-    glg: 'Gallego'
-    #>glk: 'Gilaki'
-    #>gom: 'Konkani, Goan'
+    gil: 'Gilbertés'
+    gle: 'Irlandés'
     grn: 'Guaraní'
-    #>gsw: 'Swiss German'
-    gug: 'Guaraní paraguayo'
-    guj: 'Guyaratí'
-    #>hae: 'Oromo, Eastern'
-    #>hak: 'Hakka Chinese'
     hat: 'Criollo haitiano'
-    hau: 'Hausa'
-    hbs: 'Serbocroata'
     heb: 'Hebreo'
-    hil: 'Hiligainón'
     hin: 'Hindi'
-    #>hmn: 'Hmong'
-    hne: 'Chhattisgarhí'
-    #>hoj: 'Harauti'
+    #>hmo: 'Hiri Motu'
     hrv: 'Croata'
-    #>hrx: 'Hunsrik'
-    #>hsn: 'Xiang Chinese'
     hun: 'Húngaro'
     hye: 'Armenio'
-    ibo: 'Igbo'
-    #>ilo: 'Iloko'
+    #>iba: 'Iban'
     ind: 'Indonesio'
+    isl: 'Islandés'
     ita: 'Italiano'
-    #>jam: 'Jamaican Creole English'
-    jav: 'Javanés'
     jpn: 'Japonés'
-    kab: 'Cabilio'
-    #>kam: 'Kamba (Kenya)'
-    kan: 'Canarés'
-    kas: 'Cachemir'
     kat: 'Georgiano'
-    kau: 'Canurí'
     kaz: 'Kazaj(i)o'
     khm: 'Jemer'
-    kik: 'Quicuyú'
-    kin: 'Ruandés'
-    #>kmb: 'Kimbundu'
-    #>kmr: 'Kurdish, northern'
-    #>knc: 'Kanuri, Central'
-    #>kng: 'Koongo'
-    #>knn: 'Konkani (specific)'
-    kok: 'Konkani'
-    kon: 'Kongo'
+    kir: 'Kirguís'
     kor: 'Coreano'
-    #>ktu: 'Kituba (Democratic Republic of Congo)'
-    kur: 'Kurdo'
-    lah: 'Lahnda'
     lao: 'Laosiano'
+    lat: 'Latín'
+    lav: 'Letón'
     lit: 'Lituano'
-    #>lmn: 'Lambadi'
-    lmo: 'Lombardo'
-    #>lua: 'Luba-Lulua'
-    lug: 'Luganda'
-    #>luo: 'Luo (Kenya and Tanzania)'
-    #>mad: 'Madurese'
-    mag: 'Magahi'
-    mai: 'Maithili'
-    mal: 'Malayalam'
-    #>man: 'Mandingo'
-    mar: 'Maratí'
-    #>mey: 'Hassaniyya'
-    #>min: 'Minangkabau'
+    ltz: 'Luxemburgués'
+    #>mah: 'Marshall'
+    mkd: 'Macedonio'
     mlg: 'Mal(a)gache'
-    #>mnp: 'Min Bei Chinese'
+    mlt: 'Maltés'
     mon: 'Mongol'
-    #>mos: 'Mossi'
+    mri: 'Maorí'
     msa: 'Malayo'
-    #>mui: 'Musi'
-    #>mup: 'Malvi'
-    #>mvf: 'Mongolian, Peripheral'
-    mwr: 'Marwari'
     mya: 'Birmano'
-    #>myi: 'Mina (India)'
-    #>mzn: 'Mazanderani'
-    #>nan: 'Min Nan Chinese'
-    nap: 'Napolitano'
+    nau: 'Nauruano'
+    #>nde: 'Ndebele, North'
     nep: 'Nepalí'
     nld: 'Neerlandés'
-    #>nod: 'Thai (Northern)'
     nor: 'Noruego'
-    nso: 'Sepedi'
     nya: 'Ñanya'
-    ori: 'Oriya'
-    orm: 'Oromo'
-    pan: 'Panyabí'
-    #>pbu: 'Pashto, Northern'
-    #>pes: 'Western Farsi'
-    #>plt: 'Malagasy, Plateau'
-    pms: 'Piamontés'
-    #>pnb: 'Panjabi, Western'
+    #>nzs: 'New Zealand Sign Language'
+    pau: 'Palauano'
     pol: 'Polaco'
     por: 'Portugués'
-    #>prs: 'Persian (Dari)'
-    #>pst: 'Pashto, Central'
+    #>pov: 'Crioulo, Upper Guinea'
     pus: 'Pastú'
     que: 'Quechua'
-    #>quh: 'Quechua, South Bolivian'
-    raj: 'Rayastaní'
-    #>rkt: 'Rangpuri'
-    #>rmt: 'Domari'
+    #>rar: 'Rarotongan'
     ron: 'Rumano'
     run: 'Rundí'
     rus: 'Ruso'
-    #>rwr: 'Marwari (India)'
-    sat: 'Santalí'
-    scn: 'Siciliano'
-    #>sdh: 'Kurdish, Southern'
-    #>shi: 'Tachelhit'
-    #>shn: 'Shan'
+    sag: 'Sango'
     sin: 'Cingalés'
-    #>skr: 'Seraiki'
     slk: 'Eslovaco'
+    slv: 'Esloveno'
+    smo: 'Samoano'
     sna: 'Sonés'
-    snd: 'Sindí'
     som: 'Somalí'
     sot: 'Sesotho'
-    #>sou: 'Thai, Southern'
     spa: 'Español'
     sqi: 'Albanés'
     srp: 'Serbio'
-    #>suk: 'Sukuma'
-    sun: 'Sundanés'
+    swa: 'Suahelí'
+    #>swb: 'Comorian'
     swe: 'Sueco'
-    #>swv: 'Shekhawati'
-    #>syl: 'Sylheti'
     tam: 'Tamil'
-    tat: 'Tártaro'
-    tel: 'Telugú'
+    #>tet: 'Tetum'
     tgk: 'Tayiko'
-    tgl: 'Tagalo(g)'
     tha: 'Tailandés'
     tir: 'Tigriña'
-    tsn: 'Setsuana'
-    tso: 'Tsonga'
-    #>tts: 'Thai, Northeastern'
+    ton: 'Tongano'
+    #>tpi: 'Tok Pisin'
     tuk: 'Turcomano'
     tur: 'Turco'
+    #>tvl: 'Tuvalu'
     #>tzm: 'Tamazight, Central Atlas'
-    uig: 'Uigur'
     ukr: 'Ucrani(an)o'
-    #>umb: 'Umbundu'
     urd: 'Urdu'
     uzb: 'Uzbeco'
-    #>uzn: 'Uzbek, Northern'
-    #>vah: 'Varhadi-Nagpuri'
-    vec: 'Veneciano'
     vie: 'Vietnamita'
-    vls: 'Flamenco'
-    #>vmf: 'Mainfränkisch'
-    #>vmw: 'Makhuwa'
-    wol: 'Volofo'
-    #>wry: 'Merwari'
-    #>wtm: 'Mewati'
-    #>wuu: 'Wu Chinese'
-    xho: 'Xhosa'
-    #>yor: 'Yoruba'
-    #>yue: 'Yue Chinese (Cantonese)'
-    #>zha: 'Zhuang'
-    zho: 'Chino'
-    #>zlm: 'Malay (individual language)'
-    #>zul: 'Zulu'
