--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -49,7 +49,8 @@ jpn:
     application:
     authentication:
       login: 'ログイン'
-      #>register: 'Register a company'
+      logout: 'ログアウト'
+      register: '会社を登録する'
     company:
       #>about: 'About Ekylibre'
       #>backups: 'Backups'
@@ -101,10 +102,10 @@ jpn:
       #>delivery_mode_update: 'Edit the delivery mode: %{name}'
       #>delivery_modes: 'Delivery modes'
       #>delivery_update: 'Edit the delivery'
-      #>embankment: 'Embankment %{number} on %{created_on}'
-      #>embankment_create: 'Add a new embankment: %{mode}'
-      #>embankment_update: 'Edit the embankment %{number}'
-      #>embankments: 'Embankments'
+      #>embankment: 'Transit Letter %{number} on %{created_on}'
+      #>embankment_create: 'Add a new transit letter: %{mode}'
+      #>embankment_update: 'Edit the transit letter %{number}'
+      #>embankments: 'Transit Letters'
       #>index: 'Management'
       #>inventories: 'Inventories'
       #>inventory_create: 'Add a new inventory'
@@ -145,7 +146,6 @@ jpn:
       #>sale_order_create: 'New sale order'
       #>sale_order_deliveries: 'Deliveries'
       #>sale_order_line_create: 'Add a new line of product'
-      #>sale_order_line_informations: ''
       #>sale_order_line_update: 'Edit sale order line'
       #>sale_order_lines: 'Selection of the products for the estimate %{sale_order}'
       #>sale_order_nature_create: 'Add a new type of sale'
@@ -174,7 +174,6 @@ jpn:
       #>stock_transfers: 'Transfers and loss'
       #>stocks: 'Stocks state'
       #>subscription_create: 'Add anew subscription'
-      #>subscription_message: ''
       #>subscription_nature_create: 'Add a new subscription nature'
       #>subscription_nature_update: 'Edit the subscription nature: %{name}'
       #>subscription_natures: 'Subscription natures'
@@ -189,7 +188,7 @@ jpn:
       #>undelivered_sales: 'Waiting deliveries'
       #>unexecuted_transfers: 'Waiting stock transfers'
       #>unreceived_purchases: 'Waiting purchase orders'
-      #>unvalidated_embankments: 'Waiting embankments'
+      #>unvalidated_embankments: 'Waiting transit letters'
     production:
       #>index: 'Production Management'
       #>operation: 'Operation Details %{name}'
@@ -255,6 +254,7 @@ jpn:
       #>mandates_configure: 'Configure mandates'
       #>observation_create: 'Add a new observation'
       #>observation_update: 'Update the observation'
+    resources:
   controllers:
     accountancy: '会計'
     application: '一般的な車掌'
@@ -358,7 +358,7 @@ jpn:
     #>cash: 'Cash'
     cash_tabbox:
       #>bank_statements: 'Bank statements'
-      #>embankments: 'Embankments'
+      #>embankments: 'Transit Letters'
     #>cash_update: 'Update cash'
     cashes:
       #>one: 'One'
@@ -445,7 +445,7 @@ jpn:
     #>details: 'Details'
     #>discount: 'Discount (%)'
     #>display: 'Display'
-    #>display_help: 'Display help'
+    display_help: '手伝い'
     #>district_x: '%{name} (%{code})'
     #>document_natures: 'Document natures'
     #>document_templates: 'Document templates'
@@ -463,12 +463,12 @@ jpn:
     ekylibre: 'www.ekylibre.org'
     #>email: 'Email:'
     #>embankable: 'More informations'
-    #>embankment: 'Embankment'
+    #>embankment: 'Transit Letter'
     embankment_create:
-      #>one: 'Make an embankment %{mode}: 1 payment'
-      #>other: 'Make an embankment %{mode}: %{count} payments'
-      #>zero: 'Make an embankment %{mode}: no payments'
-    #>embankment_update: 'Embankment update'
+      #>one: 'Make a transit letter %{mode}: 1 payment'
+      #>other: 'Make a transit letter %{mode}: %{count} payments'
+      #>zero: 'Make a transit letter %{mode}: no payments'
+    #>embankment_update: 'Transit Letter update'
     #>employee_name: 'Employee'
     #>end: 'to'
     #>entities_export: 'Export as a CSV file'
@@ -497,7 +497,6 @@ jpn:
     #>example: 'Example&nbsp;: %{value}'
     #>executed: 'Executed'
     #>existing_part: 'Existing part'
-    #>exit: 'Exit'
     #>expedier: 'Expedier'
     #>export: 'Export documents'
     #>export_backup: 'Export backup'
@@ -634,20 +633,20 @@ jpn:
     #>manual_period: 'from %{start} to %{finish}'
     #>meeting: 'Meeting'
     menu:
-      #>accountancy_tasks: 'Tasks'
+      accountancy_tasks: '用事'
       #>accountize: 'Accounting transfer'
       #>bank_statements: 'Bank statements'
       #>documents: 'Documents'
       #>informations: 'Informations'
       #>my_account: 'My account'
-      #>parameters: 'Parameters'
+      parameters: 'パラメーター'
       #>production: 'Production'
       #>purchases: 'Purchases'
       #>relations_tasks: 'Clients and suppliers'
       #>sales: 'Sales'
       #>stock_transfers: 'Transfers and loss'
       #>stocks_tasks: 'Stocks'
-      #>tools: 'Tools'
+      tools: '道具'
     #>merge: 'Merge'
     missing_help: '無意味なページ'
     #>mistake_on_quantities_sum: 'The sum of the quantities are not equals to the total produced quantity'
@@ -667,9 +666,9 @@ jpn:
     #>national_vat_collected: 'National Tax collected'
     #>nature: 'Nature'
     nb_enbankments:
-      #>one: '%{count} embankment to validate'
-      #>other: '%{count} embankments to validate'
-      #>zero: 'No embankments to validate'
+      #>one: '%{count} transit letter to validate'
+      #>other: '%{count} transit letters to validate'
+      #>zero: 'No transit letters to validate'
     nb_entities:
       #>one: 'One person'
       #>other: '%{count} people'
@@ -730,7 +729,7 @@ jpn:
     #>no_contacts: 'No address defined for %{name}'
     #>no_deliveries: 'No deliveries'
     #>no_deliveries_for_this_sale_order: 'No deliveries for this sale order'
-    #>no_embankments: 'No embankments'
+    #>no_embankments: 'No transit letters'
     #>no_filters: '--- No filters ---'
     #>no_javascript: 'Your web browser don''t support javascript. You need to activate it in order to use Ekylibre.'
     #>no_origin: 'No origin'
@@ -801,7 +800,7 @@ jpn:
     #>pertinence: '%{value}%'
     #>phone: 'Pho.'
     #>planned_on: 'Planned on'
-    #>previous: 'Previous'
+    previous: '前へ'
     #>previous_bank_statement: 'Previous account statement N°%{number}'
     #>price: 'Price'
     #>price_amount: 'Price amount'
@@ -860,7 +859,6 @@ jpn:
     #>record_has_not_been_removed: 'The record has not been removed'
     #>reflect: 'Reflect'
     #>refresh: 'Refresh'
-    #>register: 'Register a new company'
     #>relations: 'Clients/suppliers Relationships Management'
     #>relations_rights: 'Relationship'
     #>reopen: 'Reopen'
@@ -922,7 +920,7 @@ jpn:
     #>save: 'Save'
     #>save_in_draft: 'Save as draft'
     #>scheduled: 'Scheduled'
-    #>search: 'Search'
+    search: '探す'
     #>search_go: 'Search!'
     #>search_sales: 'Search sales'
     #>second_contact: 'Second address'
@@ -1112,7 +1110,7 @@ jpn:
     #>need_location_to_create_purchase_order_line: 'You must create a warehouse to be able to create a purchase.'
     #>need_location_to_create_sale_order_line: 'You must create a warehouse to be able to create a sale'
     #>need_location_to_record_stock_moves: 'You must create a warehouse to be able to manage stocks.'
-    #>need_payment_mode_to_create_embankment: 'You must specify a mode of payment in order to make embankments'
+    #>need_payment_mode_to_create_embankment: 'You must specify a mode of payment in order to make transit letters'
     #>need_quantities_to_cancel_an_invoice: 'You must specify a quantity in order to cancel the invoice'
     #>need_stocks_location_to_create_products: 'You must create a warehouse to be able to create a product'
     #>need_stocks_to_create_inventories: 'You have to manage some stocks in order to manage inventories'
@@ -1163,7 +1161,7 @@ jpn:
     accountancy:
       accountize:
         #>automatic: 'Activate the automatic accounting transfer'
-        #>detail_payments_in_embankments: 'Detail all the payments in embankments during accouting transfer'
+        #>detail_payments_in_embankments: 'Detail all the payments in transit letters during accouting transfer'
         #>draft_mode: 'Save the records in draft mode during accouting transfer'
       accounts:
         #>capital_gains: 'Profit for the year (earnings)'
@@ -1195,7 +1193,7 @@ jpn:
       embankments:
         #>days_before_warning_undone: 'Number of days before warning for receipts not made'
         #>days_before_warning_unvalidated: 'Number of days before warning for receipts not validated'
-        #>numeration: 'Numeration of embankments'
+        #>numeration: 'Numeration of transit letters'
       invoices:
         #>numeration: 'Numeration of invoices'
       payments:
