Fixes migrations for SQLServer
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1604 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -485,7 +485,7 @@ jpn:
     #>entity_update: 'Entity update'
     #>entries: 'Entries'
     #>entries_to_point: 'Entries pointing to'
-    error_no_file: 'ページ({{article}})はありません。'
+    error_no_file: 'ページ(%{article})はありません。'
     #>error_sale_order_already_paid: 'The sale order is already paid'
     #>errors_explanation: 'There are errors in the file. If you do not correct them, the incorrect lines will be ignored during the import.'
     #>establish_capital_goods: 'Established Capital Goods'
@@ -771,8 +771,8 @@ jpn:
     #>out_line_create: 'Add a new outgoing product'
     #>out_vat_amount: 'Basis without Taxes'
     #>overflow: 'Overflow'
-    page_title: '{{company_code}} - {{controller}} - {{action}}'
-    page_title_by_default: 'Ekylibre - {{controller}} - {{action}}'
+    page_title: '%{company_code} - %{controller} - %{action}'
+    page_title_by_default: 'Ekylibre - %{controller} - %{action}'
     #>paid_amount: 'Paid amount'
     #>paid_on: 'Paid on'
     #>parameters: 'Parameters'
